# Model-Predictive-Control-of-drone-displacement-in-ROS-2-using-Python.

./: README.md  requirements.txt  smoke_test_mpc.py
src/drone_mpc_ros/: package.xml  setup.cfg  setup.py
src/drone_mpc_ros/config/: mpc_params.yaml
src/drone_mpc_ros/drone_mpc_ros/: drone_simulator_node.py  mpc_controller_node.py  mpc_core.py  plot_results.py  reference_node.py  utils.py
src/drone_mpc_ros/launch/: drone_mpc_sim_launch.py
